--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -143,7 +143,7 @@
         app:layout_constraintVertical_bias="0.724" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/sign_in_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
