--- a/src/main/res/layout/activity_main_ig.xml
+++ b/src/main/res/layout/activity_main_ig.xml
@@ -21,7 +21,7 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.viewpager.widget.ViewPager
+    <FrameLayout
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
