--- a/src/main/res/layout/custom_home_view.xml
+++ b/src/main/res/layout/custom_home_view.xml
@@ -17,11 +17,12 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/img_profil"
-            android:layout_width="60dp"
+            android:id="@+id/img_profiles"
+            android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_vector_person_stroke" />
@@ -33,7 +34,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="Port-au-Prince"
-            app:layout_constraintStart_toEndOf="@+id/img_profil"
+            app:layout_constraintStart_toEndOf="@+id/img_profiles"
             app:layout_constraintTop_toBottomOf="@+id/tv_username" />
 
         <TextView
@@ -44,17 +45,19 @@
             android:layout_marginTop="8dp"
             android:text="Misaun_official"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/img_profil"
+            app:layout_constraintStart_toEndOf="@+id/img_profiles"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
         android:id="@+id/img_post"
-        android:layout_width="410dp"
+        android:layout_width="0dp"
         android:layout_height="259dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="56dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +68,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="406dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -148,6 +152,7 @@
                 android:id="@+id/tv_caption"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
                 android:layout_marginEnd="128dp"
                 android:layout_marginBottom="8dp"
                 android:layout_weight="1"
@@ -156,6 +161,7 @@
                 android:inputType="textMultiLine"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/user_caption"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
 
@@ -167,8 +173,6 @@
                 android:text="Misaun_official"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
-                app:layout_constraintHorizontal_bias="0.162"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="1.0"
