--- a/src/main/res/layout/profil.xml
+++ b/src/main/res/layout/profil.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/img_profil"
+        android:id="@+id/img_profiles"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginStart="8dp"
@@ -25,13 +25,13 @@
         android:layout_marginEnd="8dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/img_profil"
+        app:layout_constraintStart_toEndOf="@+id/img_profiles"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginLeft="30dp"
+            android:layout_marginLeft="60dp"
             android:layout_marginRight="30dp"
             android:orientation="vertical">
 
@@ -86,35 +86,33 @@
         </LinearLayout>
     </LinearLayout>
 
-    <Button
-        android:id="@+id/button367"
-        android:layout_width="142dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:background="@android:color/transparent"
-        android:text="Promote"
-        app:layout_constraintStart_toEndOf="@+id/img_profil"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="142dp"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout4"
+        android:layout_width="0dp"
+        android:layout_height="54dp"
         android:layout_marginStart="8dp"
-        android:background="@android:color/transparent"
-        android:text="Edit Profile"
-        app:layout_constraintStart_toEndOf="@+id/button367"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
 
-    <TextView
-        android:id="@+id/textView12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:text="Misaun"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_profil" />
+        <Button
+            android:id="@+id/button367"
+            android:layout_width="145dp"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:text="Promote" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="145dp"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:text="Edit Profile" />
+    </LinearLayout>
 
     <View
         android:id="@+id/divider"
@@ -124,44 +122,48 @@
         android:layout_marginEnd="8dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
 
     <LinearLayout
-        android:layout_width="396dp"
-        android:layout_height="43dp"
+        android:id="@+id/linearLayout5"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="2dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/divider2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
 
-        <Button
+        <TextView
             android:id="@+id/button5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Call"
-            android:background="@android:color/transparent"/>
+            android:textAlignment="center"
+            android:textStyle="bold" />
 
-        <Button
+        <TextView
             android:id="@+id/button6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Email"
-            android:background="@android:color/transparent"/>
+            android:textAlignment="center"
+            android:textStyle="bold" />
 
-        <Button
+        <TextView
             android:id="@+id/button7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Direction"
-            android:background="@android:color/transparent"/>
+            android:textAlignment="center"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <View
@@ -169,11 +171,13 @@
         android:layout_width="395dp"
         android:layout_height="1dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="161dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
         tools:ignore="MissingConstraints" />
 
     <TableLayout
@@ -184,7 +188,7 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider2">
+        app:layout_constraintTop_toTopOf="@+id/divider2">
 
         <TableRow
             android:layout_width="match_parent"
