--- a/src/main/res/layout/activity_main_ig.xml
+++ b/src/main/res/layout/activity_main_ig.xml
@@ -6,26 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".main_ig">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme" />
-
-    </com.google.android.material.appbar.AppBarLayout>
-
     <FrameLayout
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="56dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginBottom="56dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
@@ -34,7 +19,9 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/view_pager"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="-6dp"
         android:background="@android:color/background_light"
         app:labelVisibilityMode="unlabeled"
         app:menu="@menu/bottom_navigation" />
